# makoh

./: .gitignore  CMakeLists.txt  README.md
include/core/: game_controller.hpp
include/ui/: button.hpp  fonts.hpp  scorer.hpp  textures.hpp  tile.hpp  tile_selector.hpp
include/utils/: constants.hpp  enum.hpp  path_utils.hpp  states.hpp
resources/textures/: tile_temp.pixil  tiletemplate.pixil
src/: main.cpp
src/core/: game_controller.cpp
src/ui/: button.cpp  fonts.cpp  scorer.cpp  textures.cpp  tile.cpp  tile_selector.cpp
